<resources>
    <string name="app_name">Tomurcuk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gmail">Gmail</string>
    <string name="see_needs">İhtiyaçları Gör</string>
    <string name="ihtiyac_adi">İhtiyaç adı</string>
    <string name="ihtiyac_miktari">İhtiyaç miktarı</string>
    <string name="konum">Konum</string>
    <string name="kaydet">Kaydet</string>
    <string name="kurum_girisi">Kurum Girişi</string>
    <string name="requirement">İhtiyaç: %1$s</string>
    <string name="total">Miktar: %1$s</string>
    <string name="location">Konum: %1$s</string>
    <string name="mail_adresi">Mail adresi</string>
    <string name="sifre">Şifre</string>
    <string name="giris">Giriş</string>
    <string name="cikis_yap">Çıkış yap</string>
    <string name="login_message">Giriş yapılamadı</string>
</resources>